Markup whitespace fix

--- a/_grid.scss
+++ b/_grid.scss
@@ -17,7 +17,7 @@
 // -------------------------------------
 
 $gutter-width:             24px !default;
-$use-markup-fix:        true !default;
+$use-markup-fix:        false !default;
 
 
 
